  * Added sru.whitelist used to test stable release update kernels.

  [ Jeff Marcom ]
  * jobs/input.txt.in Added job requirement for accelerometer test (LP: #1135832)

  [Sylvain Pineau]
  * scripts/network_device_info, scripts/udev_resource,
    checkbox/parsers/udevadm.py: Use udev to categorise network devices instead
    of lspci (LP: #1091633)

 -- Jeff Marcom <jeff.marcom@ubuntu.com>  Mon, 18 Feb 2013 14:35:27 +0000

checkbox (0.15.3) raring; urgency=low

  * New upstream release (LP: #1131801)

  [ Daniel Manrique ]
  * scripts/pts_run: modified to output the full log from phoronix-test-suite
    (LP: #1102819)

 -- Daniel Manrique <roadmr@ubuntu.com>  Fri, 08 Feb 2013 13:37:38 -0500

checkbox (0.15.2) raring; urgency=low

  * New upstream release (LP: #1119529)

  [ Daniel Manrique ]
  * Bumped revision number to 0.15.1 and restored previous trunk changelog.
  * jobs/peripheral.txt.in: fixed string with repeated "add" (LP: #1102665) 
  * scripts/graphics_stress_test: added missing import (LP: #1102812)

  [ Jeff Lane ]
  * scripts/rendercheck_test - added missing import for errno (LP: #1103343)
    jobs/rendercheck.txt.in - fixed command string to report the correct exit
    code to checkbox
  
  [ Jeff Marcom ]
  * Converted kvm virtualization test to python3. Test will use parameters
    in config file in the event the system under test does not have internet
    access. Updated jobs/virtualization.txt.in

 -- Daniel Manrique <roadmr@ubuntu.com>  Wed, 30 Jan 2013 19:28:51 -0500

checkbox (0.15.1) raring; urgency=low

  * New upstream release (LP: #1110802)

  * Launchpad automated translation updates.

  [ Jeff Lane ]
  * jobs/monitor.txt.in - added new job monitor/multi-head to test mulitple
    displays on desktops. 
  
  [ Brendan Donegan ]
  * jobs/bluetooth.txt.in, jobs/suspend.txt.in - unblock Bluetooth hardware
    before running any Bluetooth tests to avoid these failing (LP: #1084601)