@@ -16,7 +16,7 @@ plugin: shell
 name: esata/storage-test
 user: root
 depends: esata/insert
-command: removable_storage_test ata_serial_esata
+command: removable_storage_test -s 268400000 ata_serial_esata
 _description:
  This is an automated test which performs read/write operations on an attached
  eSATA HDD
